static/stylesheets/theme.css
@charset "utf-8";
/* CSS Document */

/*HTML5 Tags Styles starts here */

@import url(http://fonts.googleapis.com/css?family=Fjalla+One);



html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 1.5em;
}
/*ol, ul {
    list-style: none;
}*/
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}



header, hgroup, nav, article, section, footer, aside, address{ display:block;}
time{  font-style:italic; padding:0px 5px;}
address{ font-size:11px; padding:10px 10px; text-align:right }
body{ font-family: Georgia, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
        font-weight: 400;
        font-size: 100%;
        color: #333;
        -webkit-font-smoothing: antialiased;
        -moz-font-smoothing: antialiased;
        font-smoothing: antialiased;
        overflow-x: hidden;
        background: #fff}
h1.maintitle{
        background:url(/images/logo4.png) no-repeat;
        height:54px;
        width:261px;
        font-size: 2em;
        line-height: 40px;
        margin: 0.5em 0 0 0;
        padding: 0;
        position: relative;
        font-weight: 300;
        color: #333;
        text-indent: -9999px;
        text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
}



div.clear{
        clear:both;
}


hgroup#title{
    float:left;
}

h1{
    font-size:3em;
    margin-bottom:0.33em;
}
h2{
    font-size:1.5em;
    margin-bottom:0.75em;
}
h3{
    font-size:1.5em;
    margin-bottom:0.75em;
}

p{
    font-size:1em;
    line-height:1.5em;
    margin-bottom:1em;
}


.sidebar h1{ font-size:1.5em; line-height:1.5em; margin-top:2em; padding:0px; border-bottom:2px solid #dedede;}

li{
    margin-bottom:1em;
}

article li{
    margin-bottom:1em;
    list-style-type:disc;
}

a{
        color: #6190ca;
        text-decoration: none;
}
a:hover { color:#406189;
text-decoration:none;}

article h2{
    font-size: 1.5em;
    line-height:1.5em;
    margin: 2em 0 0.5em 0;
}

/*
Main Styles
*/
#Wrapper{ width: 80%; margin:0px auto;}
#Wrapper2{ overflow:hidden;
    border:none;
    padding:16px 0 0 0;
}
#header {
        width: 100%;
        margin-top:0.5em;
}

.navigation {
        text-align: left;
        float:right;
        display: block;
        line-height: 50px;
        margin-top:1em;
        padding: 5px 0px;
        font-family: 'Fjalla One', sans-serif;
}

.navigation a {
        display: inline-block;
        margin: 0px 4px;
        padding: 0px 6px;
        color: #aaa;
        line-height: 30px;      
        text-shadow: 1px 1px 1px #fff;
        border: 1px solid #fff;
        background: #ffffff; /* Old browsers */
        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed',GradientType=0 ); /* IE6-9 */
        box-shadow:none;
}

.navigation a:hover{
        color: #333;
}
.navigation a:active{
        background: #fff;
}
.horizontal {
    display: inline;
}

h1, h2, h3{
        font-family: 'Fjalla One', sans-serif;
}

#title h1 a, #title h1 a:hover, #title h1 a:hover, #title h1 a:hover  { 
        margin: 40px auto 20px auto;
        padding: 15px auto;
        display: inline-block;
        text-decoration: none;
        color: #444;
        -webkit-font-smoothing: antialiased;
        border-bottom: 6px solid transparent;
        text-rendering: optimizeLegibility;
        font-family: 'Fjalla One', sans-serif;
        
}

#title h1 a:hover {
        border-bottom: 6px solid #eee;
}

#title h2 {
        font-size: 14px;
        font-weight: bold;
        letter-spacing: 2px;
        text-transform: uppercase;
        margin: 0;
        color: #6190ca;
        text-shadow: 1px 1px 1px rgba(255,255,255,0.7);
        line-height: 140%;
        padding:5px 0px;
        text-indent: -9999px;
}

#title h2 small {
        color: #000;
        font-size: 13px;
        
        font-weight: bold;
        text-transform: uppercase;
}

#title h2 a {
        text-decoration: none;
        color: #999;
}

#contents{
        min-height: 408px;
        width: 65%;
        float: left;
        padding:15px;
        overflow:hidden;
        line-height:21px;
}

#contents img {
        -moz-box-shadow: 2px 2px 10px #ccc;
        -webkit-box-shadow: 2px 2px 5px #ccc;
        box-shadow: 2px 2px 10px #ccc;
        border:#ffffff solid 8px;
        margin-top:15px;
        border-radius:6px;
        height:80%;
        width:80%;
}
#contents h1{ padding:5px 0px;}

#sidebar-wrapper {
        float: right;
        width:35%;
        padding:0 10px 10px 50px;
        border:none;
}

article{
    width:60%;
}


#logo{ background:url(/images/logo4.png) no-repeat; height:80px; width:289px;}

.sidebar {
        padding: 0 10px;
        width:90%;
        min-height: 200px;
}
.sidebar li{ padding:5px 0px;}
blockquote{ padding:10px; margin:0px 0px; border-bottom:1px solid #dedede;}
blockquote:before {
content: '\201C';
}
blockquote:after {
content: '\201D';
}
#copyrights{border-top:3px solid #CCC;border-bottom:3px solid #CCC;}
#copyrights p{ float:left; margin:10px 15px 0px 0px;}

.resize { position:fixed;
bottom:0px;
right:0px;
height:80px;
width:80px;
background:url(/images/resize.png) repeat scroll 0% 0% transparent;
}

@media all {
        #Wrapper,#logo,#navigation ul li a {
                transition:all 0.5s linear;
-o-transition:all 0.5s linear;
-moz-transition:all 0.5s linear;
-webkit-transition:all 0.5s linear;
        }
}
@media screen and (min-width: 1401px){
        /*#Wrapper{ width: 1300px; margin:0px auto;}*/
        #contents{
        width: 65%;
        }
}
@media screen and (min-width: 1200px) and (max-width: 1400px) {
        /*#Wrapper{ width: 1100px; margin:0px auto;}*/
        #contents{
        width: 65%;
        }
        
}
@media screen and (min-width: 961px) and (max-width: 1200px) {
        /*#Wrapper{ width: 960px; margin:0px auto;}*/
        #contents{
        width: 65%;
        }
        #contents h1{ line-height:40px;}
}
@media screen and (min-width: 859px) and (max-width: 960px) {
        /*#Wrapper{ width: 830px; margin:0px auto;}*/
        #navigation ul li a{ font-size:12px; padding:0px 11px;}
        #contents{
        width: 63%;
        }
        #contents h1{ line-height:40px;}
}
@media screen and (min-width: 761px) and (max-width: 860px) {
        /*#Wrapper{ width: 740px; margin:0px auto;}*/
        #navigation ul li a{ font-size:12px; padding:0px 11px;}
        #contents{
        width: 63%;
        }
        #contents h1{ font-size:30px; text-align:left; line-height:30px;}
}


@media screen and (min-width: 641px) and (max-width: 760px) {   
        /*#Wrapper{ width: 620px; margin:0px auto;}*/
        header{ text-align:center;}
        #navigation{ height:190px;}
        #navigation ul li{ float:none; text-align:center; border-bottom:1px solid #dedede; }
        #navigation ul li a{ font-size:11px; padding:0px 0px; width:100%;}
        #contents{
        width: 55%;
        font-size:16px;
        }
        article{
            width:100%;
        }
        #contents h1{ font-size:25px; text-align:left; line-height:30px;}
        #comments h1,.sidebar h1{text-align:left}
        #sidebar-wrapper {
        font-size:14px;
        width:30%;clear:both;
        padding:10px;
        }
        #logo{ background:url(/images/logo4.png) no-repeat; height:55px; width:200px; margin-left:auto; margin-right:auto;}
}

@media screen and (min-width: 421px) and (max-width: 640px) {
        #Wrapper{ width: 420px; margin:0px auto;}
        header{ text-align:center;}
        #navigation{ height:190px;}
        #navigation ul li{ float:none; text-align:center; border-bottom:1px solid #dedede; }
        .navigation a{ float:none; padding:0px 0px; width:100%; text-align:center; text-transform:uppercase;}
        #contents{
        width: 95%;
        font-size:14px;position:relative;
        }
        article{
            width:100%;
        }
        #contents h1{ font-size:22px; text-align:left; font-weight:bold; line-height:normal;}
        #comments h1,.sidebar h1{ font-size:15px; text-align:left; line-height:normal;}
        #sidebar-wrapper {
        float: none; font-size:14px;
        width:95%;clear:both; 
        padding:10px;
        }
        #logo{ background:url(/images/logo4.png) no-repeat; height:55px; width:200px; margin-left:auto; margin-right:auto;}
}

@media screen and (min-width: 320px) and (max-width: 420px) {
        #Wrapper{ width: 320px; margin:0px auto;}
        header{ text-align:center;}
        #navigation{ height:190px;}
        #navigation ul li{ float:none; text-align:center; border-bottom:1px solid #dedede;}
        .navigation a{  border-bottom:1px dotted #dedede; float:none; padding:0px 0px; width:100%; text-align:center; text-transform:uppercase;}
        #contents{
        width: 95%;
        font-size:14px;position:relative;
        }
        article{
            width:100%;
        }
        #contents h1{ font-size:18px; text-align:left; font-weight:bold; line-height:normal;}
        #comments h1,.sidebar h1{ font-size:14px; text-align:left; line-height:normal;}
        #sidebar-wrapper {
        float: none; font-size:13px;
        width:95%;clear:both;
        padding:10px; 
        }
        #logo{ background:url(/images/logo4.png) no-repeat; height:41px; width:150px; margin-left:auto; margin-right:auto;}
}
@media screen and (min-width: 0px) and (max-width: 319px) {
        #Wrapper{ width: 100%; margin:0px auto;}
        header{ text-align:center;}
        #navigation{ height:190px;}
        .navigation a{ border-bottom:1px dotted #dedede; float:none; padding:0px 0px; width:100%; text-align:center; text-transform:uppercase;}
        #contents{
        width: 95%;
        font-size:14px;position:relative;
        }
        article{
            width:100%;
        }
        #contents h1{ font-size:16px; text-align:left; font-weight:bold; line-height:normal; }
        #comments h1,.sidebar h1{ font-size:14px; text-align:left; line-height:normal;}
        #sidebar-wrapper {
        float: none;
        width:95%;clear:both; 
        padding:10px; 
        }
        #logo{ background:url(../images/logo4.png) no-repeat; height:41px; width:150px; margin-left:auto; margin-right:auto;}
}

textarea
{
    border:1px solid #999999;
    width:95%;
    margin:5px 0;
    padding:3px;        
    background-color: white;
}

pre
{
    white-space: pre-wrap;       /* css-3 */
    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
    white-space: -pre-wrap;      /* Opera 4-6 */
    white-space: -o-pre-wrap;    /* Opera 7 */
    word-wrap: break-word;      
    font-family: Cambria, Georgia, "Palatino Linotype", "Palatino LT STD", Georgia, serif
}

